--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
                           </div>
                         </div>
                       </div>
-            <div class="card mb-3">
+            <div class="row justify-content-center content-card">
                         <div class="card-body">
                           <h5 class="card-title">
                     Admin Tools
                                       </h5>
-                          <p class="card-text">Cкрипт для автоматического заполнения логов.
+                          <p class="card-text">Скрипт находится на на стадии разработки.
                           </p>
                           <a href="https://vl4sov.ml/AdminTools" class="btn btn-outline-primary card-button">Перейти</a>
                         </div>
